👁🍥 Checkpoint ./templates/index.html:57629255/40

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lyrics Toxicity Analyzer</title>
+    <title>Text Toxicity Analyzer</title>
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center">Lyrics Toxicity Analyzer</h1>
+        <h1 class="text-center">Text Toxicity Analyzer</h1>
         
         <form action="/sort-lyrics" method="post">
             <div class="form-group">
-                <label for="lyrics">Enter lyrics:</label>
-                <textarea class="form-control" name="lyrics" rows="10" placeholder="Enter lyrics here"></textarea>
+                <label for="lyrics">Enter Text:</label>
+                <textarea class="form-control" name="lyrics" rows="10" placeholder="Enter Text here"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Analyze</button>
         </form>
