🌻🍴 Checkpoint ./templates/results.html:57629255/20

--- a/templates/results.html
+++ b/templates/results.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lyrics Toxicity Results</title>
+    <title>Text Toxicity Results</title>
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center">Lyrics Toxicity Results</h1>
+        <h1 class="text-center">Text Toxicity Results</h1>
         
         <ul class="list-group mt-4">
             {% for lyric in sorted_lyrics %}
